--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,10 @@
             <zipfileset
                     src="${user.home}/.m2/repository/com/github/ZandyDEV/PlayerBorderAPI/Build_5/PlayerBorderAPI-Build_5.jar"
                     excludes="*.yml,*.php"/>
+
+            <zipfileset
+                    src="${user.home}/.m2/repository/com/github/lewysDavies/Java-Probability-Collection/v0.8/Java-Probability-Collection-v0.8.jar"
+                    excludes="*.yml,*.php"/>
             <!--<fileset dir="../Foundation/target/classes"/>-->
         </jar>
 
